fixing color gap

--- a/css/main.scss
+++ b/css/main.scss
@@ -82,7 +82,9 @@ nav {
     background:#999;
 }
 
-body {
-    min-height: 100%;
+html {
+    body {
+        min-height: 100%;
+        background-color: green;
 }
-
+}
